pagina casi terminada

--- a/app.html
+++ b/app.html
@@ -6,14 +6,12 @@
 <title>Backyard App Landing Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<!--FontAwesome-->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="css/font-awesome.min.css" rel="stylesheet">
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-<link href="css/app.css" rel="stylesheet" media="screen">
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic" />
-<link rel="stylesheet" href="css/main.css">
+<link href="css/main.css" rel="stylesheet" media="screen">
 </head>
   
 <body>
@@ -33,7 +31,7 @@
 						        <span class="icon-bar"></span>
 						        <span class="icon-bar"></span>
 						    </button>
-						    <img src="images/logo.png" class="navbar-brand">
+						    <img src="images/logo.png" class="navbar-brand logo">
 					    </div>
 
 					    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,12 +40,6 @@
 						        <li><a href="#">About<span class="sr-only">(current)</span></a></li>
 						        <li><a href="#">Features</a></li>
 						    </ul>
-						    <form class="navbar-form navbar-left" role="search">
-						        <div class="form-group">
-						          	<input type="text" class="form-control" placeholder="Search">
-						        </div>
-						        <button type="submit" class="btn btn-default">Submit</button>
-						    </form>
 					    </div><!-- /.navbar-collapse -->
 					</div><!-- /.container-fluid -->
 				</nav>
@@ -55,46 +47,45 @@
  		</div>
  	</header>
  	<section>
- 		<div class="container-fluid picfondo">
- 			<div class="container">
- 				<div class="row">
- 					<div class="col-xs-6 col-sm-3 col-md-7 pull-left">
-	 					<h3 class="titlebig">Mobile Strategy App</h3>
-	 					<p class="titlebig">Backyard is a modern and customizable landing page template designed to increase conversion of your poduct. Backyard is flexible to suit any kind of your business. Try now and join with our happy Customers!</p>
-						<button class="btn btn-primary waves-effect waves-light" type="button"><a href="#">Features</a></button>
-						<button class="btn btn-default waves-effect waves-light" type="button"><a href="#">Suscribe</a></button>
-						<h6>Avaible for: <a href="#"><span class="fa fa-apple"></span>IOS</a><a href="#"><span class="fa fa-android"></span>ANDROID</a></h6>
-					</div>
- 				</div>
- 			</div>
- 		</div>
+		<div class="container-fluid picfondo">
+	 		<div class="container-fluid bg-dark">
+	 			<div class="container">
+	 				<div class="row">
+	 					<div class="col-xs-6 col-sm-3 col-md-7 pull-left">
+		 					<h3 class="titlebig">Mobile Strategy App</h3>
+		 					<p class="titlebig">Backyard is a modern and customizable landing page template designed to increase conversion of your poduct. Backyard is flexible to suit any kind of your business. Try now and join with our happy Customers!</p>
+							<button class="btn btn-primary waves-effect waves-light" type="button"><a href="#">Features</a></button>
+							<button class="btn btn-default waves-effect waves-light" type="button"><a href="#">Suscribe</a></button>
+							<h6 class="titlebig sistem">Avaible for: <span class="fa fa-apple"></span> IOS <span class="fa fa-android"></span> ANDROID</h6>
+						</div>
+	 				</div>
+	 			</div>
+	 		</div>
+		</div>
  	</section>
  	<section>
  		<div class="container">
  			<div class="row">
- 				<div class="media">
-				  	<div class="media-left">
-				    	<a href="#">
-				      		<img class="media object" src="images/2.jpg">
-				    	</a>
-				  	</div>
-				  	<div class="media-body">
-				    	<h2 class="media-heading">Optimize Performance Through Advanced Tergetin Solutions</h2>
-				    	<p>Good Marketing makes the company look smart. <b>Geat Marketing</b> makes the customer feel smart, -Joe Chernov. Never doubt a small group of thoughtful, committed people can change the world. Indeed, it is the only thing that ever has,- Margaret Mead. The Best way to predict the future is to create ir.-Peter Drucker.</p>
-				  	</div>
-				  	<button class="btn btn-default waves-effect waves-light" type="button"><a href="#">Learn More</a></button>
+ 				<div class="performance">
+					<div class="img-celu pull-left col-md-5"><img class="media object img-cel" src="images/2.jpg"></div>
+					<div class="media-body col-md-6 pull-right">
+					    <h4 class="media-heading">Optimize Performance Through Advanced Tergetin Solutions</h4>
+					    <p>Good Marketing makes the company look smart. <a class="color" href="#">Geat Marketing</a> makes the customer feel smart, -Joe Chernov. Never doubt a small group of thoughtful, committed people can change the world. Indeed, it is the only thing that ever has,- Margaret Mead. The Best way to predict the future is to create ir.-Peter Drucker.</p>
+					  	<button class="btn btn-default waves-effect waves-light" type="button"><a href="#">Learn More</a></button>
+					</div>
 				</div>
  			</div>
  		</div>
  	</section>
 	<section>
-		<div class="container-fluid">
+		<div class="container-fluid bg-gray">
 			<div class="container">
 				<div class="row">
-					<h3>Recreate your ideas andgain more success</h3>
-					<h5>Increade your user loyalty by maintaining mutual communication and nurturing your online community</h5>
+					<div class="performance">
+						<h4>Recreate your ideas andgain more success</h4>
+						<h6>Increade your user loyalty by maintaining mutual communication and nurturing your online community</h6>
 					<div class="col-xs-12 col-sm-8 col-md-4">
-						<img src="images/2.jpg">
+						<img class="img-cel" src="images/2.jpg">
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-4">
 						<h5>Marketing Strategy</h5>
@@ -111,6 +102,7 @@
 					<div class="col-xs-12 col-sm-6 col-md-4">
 						<h5>User Management</h5>
 						<p>Instead of using technology to automate processes, think about using technology to enhance human interaction</p>
+					</div>
 					</div>
 				</div>
 			</div>
@@ -130,10 +122,10 @@
 				</div>
 			</div>
 		</div>
-		  
 	</footer>
  <script src="js/jquery.js"></script>
  <script src="js/bootstrap.min.js"></script>
+
     
   </body>
 </html>
